Time to clean up a little bit. It's spring time. And a lot of reorganisation.

--- a/digicubes_flask/web/templates/account/login.jinja
+++ b/digicubes_flask/web/templates/account/login.jinja
@@ -1,4 +1,4 @@
-{% extends "account_base.jinja" %}
+{% extends "page_base.jinja" %}
 
 {% block main_menu %}
   <li><a href="{{ url_for('account.register') }}">Register</a></li>
