--- a/digicubes_flask/web/templates/account/index.jinja
+++ b/digicubes_flask/web/templates/account/index.jinja
@@ -1,29 +1,21 @@
 {% extends "account/base.jinja" %}
 
-{% block main_menu %}
-  <li><a href="{{ url_for('account.logout') }}">Logout</a></li>
-  {% if current_user.dbuser.first_name is defined and current_user.dbuser.last_Name is defined %}
-    <li><a href="{{ url_for('account.logout') }}">Welcome {{ current_user.dbuser.first_name }} {{ current_user.dbuser.last_name }}</a></li>
-  {% else %}
-    <li><a href="{{ url_for('account.logout') }}">Welcome {{ current_user.dbuser.login }}</a></li>
-  {% endif %}
-  
+{% block space_name %}Root{% endblock %}
 
+{% block page_title %}Because you can{% endblock %}
+
+{% block main_menu %}
+  <li><a href="{{ url_for('account.home') }}">Home</a></li>
+  <li><a href="{{ url_for('account.home') }}">System</a></li>
+  <li><a href="{{ url_for('admin.index') }}">Admin</a></li>
+  <li><a href="{{ url_for('account.logout') }}">Logout</a></li>  
 {% endblock %}
 
+{% block sub_menu %}
+  <li><a href="{{url_for('admin.create_user')}}">Setup</a></li>
+{% endblock %}
+
+
 {% block main_content %}
-  <div class="row">
-    <div class="col s3" id="dc-left-nav">
-      <div class="divider"></div>
-      {% if current_user.has_right('no_limits') %}
-      <div class="section"><a href="{{ url_for('admin.users') }}">Users<a></div>
-      <div class="divider"></div>
-      {% endif %}
-      {% if current_user.is_root %}
-      <div class="section"><a href="{{ url_for('admin.roles') }}">Roles</a></div>
-      <div class="divider"></div>
-      {% endif %}
-    </div>  
-    <div class="col s9" id="dc-main"></div>
-  </div>      
+
 {% endblock %}        
