--- a/digicubes_flask/web/templates/account/login.jinja
+++ b/digicubes_flask/web/templates/account/login.jinja
@@ -7,24 +7,26 @@
 {% block main_content %}
 <div class="section">
   <div class="row">
-    <div class="col s6 offset-s3">
-      <h3>Welcome back</h3>
+    <div class="col s2">
+    &nbsp;
     </div>
-  </div>
-  <div class="row">
-    <div class="col s6 offset-s3" id="dc_main">
+    <div class="col s8" id="dc_main">
+      <h2>Welcome back</h2>
       <form method="POST" action="{{ url_for('account.login') }}">
-          {{ form.csrf_token }}
-          <div class="row">
-            {{ form.login(grid="s12") }}
-          </div>
-          <div class="row">
-            {{ form.password(type="password", grid="s12", value=False) }}
-          </div>
-          <div class="row">
-            <div class="col s12 right-align">{{ form.submit }}</div>
-          </div>
+        {{ form.csrf_token }}
+        <div class="row">
+          {{ form.login(grid="s12") }}
+        </div>
+        <div class="row">
+          {{ form.password(type="password", grid="s12", value=False) }}
+        </div>
+        <div class="row">
+          <div class="col s12 right-align">{{ form.submit }}</div>
+        </div>
       </form>
+    </div>
+    <div class="col s2">
+      <img src="{{ url_for('static', filename='image/digican.png') }}">
     </div>
   </div>
 </div>
