--- a/digicubes_flask/web/templates/admin/create_user.jinja
+++ b/digicubes_flask/web/templates/admin/create_user.jinja
@@ -8,7 +8,7 @@ Create new User Account
 <div class="section">
   <div class="row">
     <div class="col s12" id="dc_main">
-      <form method="POST" action="{{ url_for('account.register') }}">
+      <form method="POST" action="{{ url_for('admin.create_user') }}">
           {{ form.csrf_token }}
           <div class="row">
             {{ form.first_name(grid="s6") }}
