--- a/digicubes_flask/web/templates/page_base.jinja
+++ b/digicubes_flask/web/templates/page_base.jinja
@@ -2,12 +2,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!--Import Google Icon Font-->
+        <!--Import Google Fonts-->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Exo+2:400,500,700&display=swap&subset=latin-ext" rel="stylesheet"> 
         <!--Import materialize.css-->
         <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/materialize.min.css') }}"  media="screen,projection"/>
-        <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/digicubes.css') }}"  media="screen,projection"/>
-        {{ moment.include_moment() }}
+        <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/digicubes.css') }}"  media="screen,projection"/>        
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
@@ -19,10 +19,19 @@
 
                 <div class="container">
                     <div class="nav-wrapper">
-                        <span class="brand-logo">DigiCubes {% block space_name %}{% endblock %}</span>
-                        <ul class="right hide-on-med-and-down">
-                            {% block main_menu %}{% endblock %}
-                        </ul>
+                        <div class="row">
+                            <div class="col s1">
+                                <object id="front-page-logo" type="image/svg+xml" data="{{ url_for('static', filename='image/DigiCubes_Kontur.svg') }}">Your browser does not support SVG</object>
+                            </div>
+                            <div class="col s3">
+                                <span class="brand-logo dc-brand">DigiCubes {% block space_name %}{% endblock %}</span>
+                            </div>
+                            <div class="col s8">
+                                <ul class="right hide-on-med-and-down">
+                                    {% block main_menu %}{% endblock %}
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </nav>
@@ -33,10 +42,19 @@
             <nav class="light-blue lighten-2 dc-submenu">
             <div class="container">
                 <div class="nav-wrapper">
-                    <a href="#!" class="brand-logo left">{% block page_title %}{% endblock %}</a>
-                    <ul class="right hide-on-med-and-down">
-                        {% block sub_menu %}{% endblock %}
-                    </ul>
+                    <div class="row">
+                        <div class="col s1">
+                        &nbsp;
+                        </div>
+                        <div class="col s3">
+                            <div class="brand-logo left">{% block page_title %}{% endblock %}</div>
+                        </div>
+                        <div class="col s8">
+                            <ul class="right hide-on-med-and-down">
+                                {% block sub_menu %}{% endblock %}
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
             </div>
@@ -50,6 +68,7 @@
         <script type="text/javascript" src="{{ url_for('static', filename='js/materialize.min.js') }}"></script>
         <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-3.4.1.slim.min.js') }}"></script>
         <script type="text/javascript" src="{{ url_for('static', filename='js/digicubes.js') }}"></script>
+        <!--  moment.include_moment()  -->
         <script type="text/javascript">
             {% block page_script %}{% endblock %}
         </script>
