--- a/digicubes_flask/web/static/css/digicubes.css
+++ b/digicubes_flask/web/static/css/digicubes.css
@@ -14,6 +14,9 @@ strong {
 .dc-attr {
     font-weight: 900;
     padding: 3px 0px !important;
+    margin-right: 1rem;
+    white-space: nowrap;
+
 }
 
 .dc-val {
