--- a/digicubes_flask/web/templates/admin/create_course.jinja
+++ b/digicubes_flask/web/templates/admin/create_course.jinja
@@ -1,3 +1,15 @@
+{# 
+  Create a new course. 
+
+  Creates a new course
+
+  Expected variables:
+    - form  : Instance of CreateCourseForm
+    - school: Instance of SchoolProxy. The school, the course should be created
+              for.
+  
+  Author : FirstKlaas
+#}
 {% extends "admin/base.jinja" %}
 
 {% block page_title %}
@@ -15,26 +27,7 @@ Create new Course for {{ school.name }}
   <h2>Course Details</h2>
   <div class="row">
     <div class="col s6" id="dc_main">
-      <form method="POST" action="{{ url_for('admin.create_school_course', school_id=school.id) }}">
-          {{ form.csrf_token }}
-          {{ form.school_id(value=school.id) }}
-          <div class="row">
-            {{ form.name(grid="s12") }}
-          </div>
-          <div class="row">
-            {{ form.description(grid="s12") }}
-          </div>          
-          <div class="row">
-            {{ form.from_date(grid="s6") }}
-            {{ form.until_date(grid="s6") }}
-          </div>          
-          <div class="row">
-            {{ form.is_private(grid="s12", value="true", unchecked_label="Private", checked_label="Public") }}
-          </div>
-          <div class="row">
-            <div class="col s12 right-align">{{ form.submit }}</div>
-          </div>
-      </form>
+    {% include "admin/fragments/create_course_form.jinja" with context %}
     </div>
     <div class="col s6">
     </div>
@@ -54,10 +47,3 @@ Create new Course for {{ school.name }}
   });
         
 {% endblock %}   
-
-<!--
-  $(document).ready(function() {
-    M.updateTextFields();
-    $('.datepicker').datepicker();
-  });
---/>
