--- a/digicubes_flask/web/templates/admin/create_course.jinja
+++ b/digicubes_flask/web/templates/admin/create_course.jinja
@@ -18,7 +18,7 @@ Create new Course for {{ school.name }}
 
 {% block sub_menu %}
     <li>
-        <a href="{{url_for('admin.edit_school', school_id=school.id)}}">Back</a>
+        <a href="{{url_for('admin.school', school_id=school.id)}}">Back</a>
     </li>
 {% endblock %}
 
