--- a/digicubes_flask/web/templates/admin/schools.jinja
+++ b/digicubes_flask/web/templates/admin/schools.jinja
@@ -6,7 +6,7 @@ Schools Overview
 
 {% block sub_menu %}
     <li>
-        <a href="{{url_for('admin.create_school')}}">Create new School</a>
+        <a href="{{url_for('admin.create_school')}}">New School</a>
     </li>
 {% endblock %}
 
