--- a/digicubes_flask/web/templates/admin/update_user.jinja
+++ b/digicubes_flask/web/templates/admin/update_user.jinja
@@ -1,21 +1,20 @@
 {% extends "admin/base.jinja" %}
 {% import "macros/forms.jinja" as forms %}
 
-
 {% block page_title %}
-Create new User
+Update User Account
 {% endblock %}
 
 {% block main_content %}
 <div class="section">
   <div class="row">
     <div class="col s12" id="dc_main">
-      <form method="POST" action="{{ url_for('admin.create_user') }}">
+      <form method="POST" action="{{ url_for('admin.update_user', user_id=user.id) }}">
           {{ form.csrf_token }}
           {{ forms.row(form, "login") }}
           {{ forms.row_two_columns(form, "first_name", "last_name") }}
           {{ forms.row(form, "email") }}
-          {{ forms.row_two_columns(form, "password", "password2") }}
+          {{ forms.row_two_columns(form, "is_active", "is_verified") }}
           {{ forms.submit(form) }}
       </form>
     </div>
