--- a/digicubes_flask/web/templates/macros/forms.jinja
+++ b/digicubes_flask/web/templates/macros/forms.jinja
@@ -4,8 +4,17 @@
     </div>
 {%- endmacro %}
 
+{% macro row_two_columns(form, field_name_one, field_name_two) -%}
+    <div class="row">
+        {{ form[field_name_one](grid="s6") }}
+        {{ form[field_name_two](grid="s6") }}
+    </div>
+{%- endmacro %}
+
 {% macro submit(form) -%}
     <div class="row">
         <div class="col s12 right-align">{{ form.submit }}</div>
     </div>
 {%- endmacro %}
+
+
