--- a/digicubes_flask/web/templates/admin/school.jinja
+++ b/digicubes_flask/web/templates/admin/school.jinja
@@ -60,7 +60,7 @@ School
                 <th style="width: 12em;">Created at</th>
                 <th style="width: 1em;"></th>
             </tr>
-            <tbody >
+            <tbody class="vtop">
         {% for course in courses %}
             <tr>
                 <td>{{ course.name | nonefilter }}</td>
