--- a/digicubes_flask/web/templates/admin/schools.jinja
+++ b/digicubes_flask/web/templates/admin/schools.jinja
@@ -24,10 +24,13 @@ Schools Overview
                 <th style="width: 10rem;">Created at</th>
                 <th class="right-align" style="width: 1rem;"></th>
             </tr>
-            <tbody>
+            <tbody class="dc-vtop">
             {% for school in schools %}
                 <tr>
-                    <td><a href="{{ url_for('admin.school', school_id=school.id) }}">{{ school.name }}</a></td> 
+                    <td>
+                        <a href="{{ url_for('admin.school', school_id=school.id) }}">{{ school.name }}</a>
+                        <span class="badge" dc-school-id="{{school.id}}">-</span>
+                    </td> 
                     <td>{{ school.description | md }}</td>                     
                     <td>{{ school.created_at | digidate }}</td> 
                     <td class="right-align dc-icon-column">
@@ -44,3 +47,19 @@ Schools Overview
 </div> 
 {% endblock %}        
 
+{% block page_script %}
+    $().ready(function() {
+
+        $( "span[dc-school-id]").each( function( index ) {
+            $container = $( this )
+            school_id = $container.attr("dc-school-id");
+            
+            DigiCubes.getSchoolCoursesInfo(school_id)
+            .then( (data) => {
+                $(this).text(data.count_courses + "/" + data.count_courses);
+            });
+
+                
+        })
+    });
+{% endblock %}
