--- a/digicubes_flask/web/templates/page_base.jinja
+++ b/digicubes_flask/web/templates/page_base.jinja
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        {% block html_head %}
         <!--Import Google Fonts-->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Exo+2:400,500,700&display=swap&subset=latin-ext" rel="stylesheet"> 
@@ -10,6 +11,7 @@
         <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/digicubes.css') }}"  media="screen,projection"/>        
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        {% endblock %}
     </head>
 
     <body>
