--- a/digicubes_flask/web/static/css/digicubes.css
+++ b/digicubes_flask/web/static/css/digicubes.css
@@ -5,6 +5,7 @@ button, input, optgroup, select, textarea, BODY {
 
 p {
     margin: 0px;
+    padding: 0px;
 }
 
 strong {
@@ -36,9 +37,18 @@ TBODY.vtop TD {
     padding: 3px 10px !important;
 }
 
-H2 {
-    font-size: 2.5rem;
+H1 {
     color: #03a9f4;
+}
+
+H2 {
+    font-size: 2rem;
+    color: #03a9f4;
+}
+
+H5 {
+    font-size: 1.5rem;
+    color: #90a4ae;
 }
 
 TH {
