--- a/digicubes_flask/web/templates/admin/school.jinja
+++ b/digicubes_flask/web/templates/admin/school.jinja
@@ -19,68 +19,51 @@ School
 {% block main_content %}
 <div class="section">
     <div class="row">
-        <h2>Details</h2>
-    </div>
-    <div class="row">
-        <div class="col s2 m1 dc-attr">Name</div>
-        <div class="light col s3 m3 dc-val">{{ school.name | nonefilter }}</div>
-        <div class="bold col s7 m8"></div>
-    </div>
-    <div class="row">
-        <div class="bold col s2 m1 dc-attr">Description</div>
-        <div class="light col s3 m3 dc-val">{{ school.description | md }}</div>
-        <div class="bold col s7 m8"></div>
-    </div>
-    <div class="row">
-        <div class="bold col s2 m1 dc-attr">Created at</div>
-        <div class="light col s3 m3 dc-val">{{ school.created_at | digidate }}</div>
-        <div class="bold col s7 m8"></div>
-    </div>
-    <div class="row">
-        <div class="bold col s2 m1 dc-attr">Modified at</div>
-        <div class="light col s3 m3 dc-val">{{ school.modified_at | digidate }}</div>
-        <div class="bold col s7 m8"></div>
+        <div class="col s12">
+            <h1>{{ school.name | nonefilter }}</h1>
+            <h5 class="flowtext">{{ school.description | md }}</h5>
+        </div>
     </div>
 </div>
 
 <div class="section">
     <div class="row">
-        <h2>Courses</h2>
+        <div class="col s12">
+            <h2>Courses</h2>
+            {% if courses %}
+            <table class="highlight">
+                <thead>
+                <tr>
+                    <th style="width: 20em;">Name</th>
+                    <th style="width: 60em;">Description</th>
+                    <th style="width: 10em;">From</th>
+                    <th style="width: 10em;">Until</th>
+                    <th style="width: 12em;">Created at</th>
+                    <th style="width: 1em;"></th>
+                </tr>
+                <tbody class="vtop">
+            {% for course in courses %}
+                <tr>
+                    <td>{{ course.name | nonefilter }}</td>
+                    <td>{{ course.description | md }}</td>
+                    <td>{{ course.from_date | digidate }}</td>
+                    <td>{{ course.until_date | digidate }}</td>
+                    <td>{{ course.created_at | digidate }}</td> 
+                    <td class="right-align dc-icon-column">
+                        <a href="#">
+                            <i class="material-icons red-text text-darken-3">delete</i>
+                        </a>
+                    </td>
+
+                </tr>
+            {% endfor %}
+                </tbody>
+            </table>
+            {% else %}
+            <a href="{{ url_for('admin.create_school_course', school_id=school.id) }}" class="waves-effect waves-light light-blue btn-large">Create your first course</a>
+            {% endif %}
+        </div>
     </div>
-
-
-    {% if courses %}
-        <table class="highlight">
-            <thead>
-            <tr>
-                <th style="width: 20em;">Name</th>
-                <th style="width: 60em;">Description</th>
-                <th style="width: 10em;">From</th>
-                <th style="width: 10em;">Until</th>
-                <th style="width: 12em;">Created at</th>
-                <th style="width: 1em;"></th>
-            </tr>
-            <tbody class="vtop">
-        {% for course in courses %}
-            <tr>
-                <td>{{ course.name | nonefilter }}</td>
-                <td>{{ course.description | md }}</td>
-                <td>{{ course.from_date | digidate }}</td>
-                <td>{{ course.until_date | digidate }}</td>
-                <td>{{ course.created_at | digidate }}</td> 
-                <td class="right-align dc-icon-column">
-                    <a href="#">
-                        <i class="material-icons red-text text-darken-3">delete</i>
-                    </a>
-                </td>
-
-            </tr>
-        {% endfor %}
-            </tbody>
-        </table>
-    {% else %}
-    <a href="{{ url_for('admin.create_school_course', school_id=school.id) }}" class="waves-effect waves-light light-blue btn-large">Create your first course</a>
-    {% endif %}
 </div>
 
 {% endblock %}
