Rework logout procedure

--- a/digicubes_flask/web/templates/admin/school.jinja
+++ b/digicubes_flask/web/templates/admin/school.jinja
@@ -41,7 +41,7 @@ School
                     <th style="width: 12em;">Created at</th>
                     <th style="width: 1em;"></th>
                 </tr>
-                <tbody class="vtop">
+                <tbody class="dc-vtop">
             {% for course in courses %}
                 <tr>
                     <td>{{ course.name | nonefilter }}</td>
