--- a/digicubes_flask/web/templates/admin/roles.jinja
+++ b/digicubes_flask/web/templates/admin/roles.jinja
@@ -21,6 +21,8 @@ Roles Overview
         <thead>
             <tr>
             <th>Name</th>
+            <th>Home</th>
+            <th>Description</th>
             <th style="width: 10em;">Angelegt am</th>
             <th class="right-align" style="width: 1em;" colspan=2>Actions</th>
         </tr>
@@ -28,7 +30,9 @@ Roles Overview
             {% for role in roles %}
                 <tr>
                     <td><a href="#">{{ role.name }}</a></td> 
-                    <td style="width: 10em;">{{ role.created_at | digidate }}</td> 
+                    <td ><a href="{{ url_for(role.home_route) }}">{{ role.home_route }}</a></td> 
+                    <td >{{ role.description | md }}</td> 
+                    <td >{{ role.created_at | digidate }}</td> 
                     <td class="right-align" style="width: 1em;">
                         <a href="#"><i class="material-icons red-text text-darken-3">delete</i></a>
                     </td>
