Consolidated to one school form

--- a/digicubes_flask/web/templates/admin/fragments/school_form.jinja
+++ b/digicubes_flask/web/templates/admin/fragments/school_form.jinja
@@ -1,6 +1,6 @@
 {% import "macros/forms.jinja" as forms %}
 
-<form method="POST" action="{{ url_for('admin.update_school', school_id=school.id) }}">
+<form method="POST" action="{{ action }}">
     {{ form.csrf_token }}
     {{ forms.row(form, "name") }}
     {{ forms.row(form, "description") }}
