--- a/digicubes_flask/web/templates/account/register.jinja
+++ b/digicubes_flask/web/templates/account/register.jinja
@@ -1,4 +1,4 @@
-{% extends "account_base.jinja" %}
+{% extends "account/base.jinja" %}
 
 {% block main_menu %}
   <li><a href="{{ url_for('account.login')}}">Home</a></li>
