--- a/digicubes_flask/web/templates/admin/update_user.jinja
+++ b/digicubes_flask/web/templates/admin/update_user.jinja
@@ -9,9 +9,9 @@ Update User Account
 <div class="section">
   <div class="row">
     <div class="col s12" id="dc_main">
-      <form method="POST" action="{{ url_for('admin.update_user', user_id=user.id) }}">
+      <form method="POST" action="{{ action }}">
           {{ form.csrf_token }}
-          {{ forms.row(form, "login") }}
+          {{ forms.row_two_columns(form, "login", "password") }}
           {{ forms.row_two_columns(form, "first_name", "last_name") }}
           {{ forms.row(form, "email") }}
           {{ forms.row_two_columns(form, "is_active", "is_verified") }}
