--- a/digicubes_flask/web/templates/account/index.jinja
+++ b/digicubes_flask/web/templates/account/index.jinja
@@ -2,7 +2,7 @@
 
 {% block space_name %}Root{% endblock %}
 
-{% block page_title %}Because you can{% endblock %}
+{% block page_title %}Version {{version}}{% endblock %}
 
 {% block main_menu %}
   <li><a href="{{ url_for('account.home') }}">Home</a></li>
