Dynamically read version.

--- a/digicubes_flask/web/templates/account/login.jinja
+++ b/digicubes_flask/web/templates/account/login.jinja
@@ -26,7 +26,7 @@
       </form>
     </div>
     <div class="col s2">
-      <img src="{{ url_for('static', filename='image/digican.png') }}">
+      <img class="hide-on-small-only" src="{{ url_for('static', filename='image/digican.png') }}">
     </div>
   </div>
 </div>
