--- a/digicubes_flask/web/templates/admin/index.jinja
+++ b/digicubes_flask/web/templates/admin/index.jinja
@@ -6,5 +6,10 @@ Welcome
 
 
 {% block main_content %}
+<div class="section hide-on-med-and-up">
+    <div class="row">
+        <a href="{{ url_for('account.logout') }}" class="waves-effect waves-light btn">Logout</a>
+    </div>
+</div>
 {% endblock %}        
 
