--- a/digicubes_flask/web/static/css/digicubes.css
+++ b/digicubes_flask/web/static/css/digicubes.css
@@ -56,6 +56,11 @@ H2 {
     color: #03a9f4;
 }
 
+H3 {
+    font-size: 1.4rem;
+    color: #03a9f4;
+}
+
 H5 {
     font-size: 1.2rem;
     color: #90a4ae;
