--- a/digicubes_flask/web/templates/admin/change_password.jinja
+++ b/digicubes_flask/web/templates/admin/change_password.jinja
@@ -5,15 +5,7 @@
 <div class="section">
     <div class="row">
         <div class="col s12">
-            <h2>Congratulation {{ user.first_name }}</h2>
-            <p>Your account has been successfully verified.</p>
-        </div>
-    </div>
-</div>
-<div class="section">
-    <div class="row">
-        <div class="col s12">
-            <h3>Now set your password</h3>
+            <h3>Change password</h3>
         </div>
     </div>
     <div class="row">
