--- a/digicubes_flask/web/templates/admin/user.jinja
+++ b/digicubes_flask/web/templates/admin/user.jinja
@@ -11,6 +11,9 @@ User Details
     <li>
         <a href="{{url_for('admin.delete_user', user_id=user.id)}}">Delete</a>
     </li>
+    <li>
+        <a href="{{url_for('admin.verify_renew', user_id=user.id)}}">Verify</a>
+    </li>
 {% endblock %}
 
 {% block main_content %}
