Reorg Moved update_password and verify to account blueprint. First version of space selection, if you have more, than one role.

--- a/digicubes_flask/web/templates/account/change_password.jinja
+++ b/digicubes_flask/web/templates/account/change_password.jinja
@@ -1,4 +1,4 @@
-{% extends "admin/base.jinja" %}
+{% extends "account/base.jinja" %}
 {% import "macros/forms.jinja" as forms %}
 
 {% block main_content %}
