--- a/digicubes_flask/web/templates/account/home.jinja
+++ b/digicubes_flask/web/templates/account/home.jinja
@@ -10,6 +10,28 @@
 {% endblock %}
 
 {% block main_content %}
-  Continue as: {{ data }}
-  (Not implemented so far.)
+  <div class="section">
+  {% if roles %}
+    <div class="row">
+      <div class="col s12"><h3>Continue as</h3></div>
+    </div>
+    <div class="row">
+    {% for role in roles %}
+    <div class="col s12 m6 l3">
+      <div class="card blue-grey darken-2">
+        <div class="card-content white-text">
+          <span class="card-title">{{ role.name }}</span>
+          <p>{{ role.description }}</p>
+        </div>
+        <div class="card-action">
+          <a href="{{ url_for(role.home_route) }}">continue</a>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+    </div>
+  {% else %}
+    You have no role. What's next? That doesn't make any sense
+  {% endif %}
+  </div>
 {% endblock %}        
