--- a/digicubes_flask/web/templates/admin/base.jinja
+++ b/digicubes_flask/web/templates/admin/base.jinja
@@ -1,7 +1,7 @@
 
 {% extends "page_base.jinja" %}
 
-{% block space_name %}Administration{% endblock %}
+{% block space_name %}Admin{% endblock %}
 
 {% block main_menu %}
   <li><a href="{{ url_for('account.home') }}">Home</a></li>
