--- a/digicubes_flask/web/templates/admin/send_verification_link.jinja
+++ b/digicubes_flask/web/templates/admin/send_verification_link.jinja
@@ -26,7 +26,7 @@ User Details
             The user has to verify his account by clicking the link. Please send the link to the user.
         </div>
         <div class="col s12">
-            <a href="{{link}}">{{link}}</a>
+            <a href="{{link}}">Verification link</a>
         </div>
     </div>
 </div>
