Reworked menu and mobile menu

--- a/digicubes_flask/web/templates/admin/base.jinja
+++ b/digicubes_flask/web/templates/admin/base.jinja
@@ -10,5 +10,13 @@
   <li><a href="{{ url_for('admin.rights') }}">Rights</a></li>
   <li><a href="{{ url_for('admin.schools') }}">Schools</a></li>
   <li><a href="{{ url_for('account.logout') }}">Logout</a></li>
+{% endblock %}
 
+{% block mobile_menu %}
+  <li><a href="{{ url_for('account.home') }}">Home</a></li>
+  <li><a href="{{ url_for('admin.users') }}">User</a></li>
+  <li><a href="{{ url_for('admin.roles') }}">Roles</a></li>
+  <li><a href="{{ url_for('admin.rights') }}">Rights</a></li>
+  <li><a href="{{ url_for('admin.schools') }}">Schools</a></li>
+  <li><a href="{{ url_for('account.logout') }}">Logout</a></li>
 {% endblock %}
