--- a/digicubes_flask/web/templates/admin/create_user.jinja
+++ b/digicubes_flask/web/templates/admin/create_user.jinja
@@ -6,6 +6,8 @@
 Create new User
 {% endblock %}
 
+{% block space_name %}New User{% endblock %}
+
 {% block main_content %}
 <div class="section">
   <div class="row">
