--- a/digicubes_flask/web/templates/account/index.jinja
+++ b/digicubes_flask/web/templates/account/index.jinja
@@ -12,6 +12,14 @@
   <li><a href="{{ url_for('account.logout') }}">Logout</a></li>  
 {% endblock %}
 
+{% block mobile_menu %}
+  <li><a href="{{ url_for('account.home') }}">Home</a></li>
+  <li><a href="{{ url_for('account.home') }}">System</a></li>
+  <li><a href="{{ url_for('admin.index') }}">Admin</a></li>
+  <li><a href="{{ url_for('blockly.index') }}">Blockly</a></li>
+  <li><a href="{{ url_for('account.logout') }}">Logout</a></li>  
+{% endblock %}
+
 {% block sub_menu %}
   <li><a href="{{url_for('admin.create_user')}}">Setup</a></li>
 {% endblock %}
