--- a/digicubes_flask/web/templates/page_base.jinja
+++ b/digicubes_flask/web/templates/page_base.jinja
@@ -16,51 +16,21 @@
 
     <body>
         <header>
-            <div class="navbar-fixed">
-            <nav class="top-nav light-blue " role="navigation">
-
-                <div class="container">
-                    <div class="nav-wrapper">
-                        <div class="row">
-                            <div class="col s2">
-                                <object id="front-page-logo" type="image/svg+xml" data="{{ url_for('static', filename='image/DigiCubes_Kontur.svg') }}">Your browser does not support SVG</object>
-                            </div>
-                            <div class="col s2">
-                                <span class="brand-logo dc-brand">{% block space_name %}{% endblock %}</span>
-                            </div>
-                            <div class="col s8">
-                                <ul class="right hide-on-med-and-down">
-                                    {% block main_menu %}{% endblock %}
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
+            <nav class="fixed-nav light-blue " role="navigation">
+                <div class="nav-wrapper container">
+                    <object id="front-page-logo" type="image/svg+xml" data="{{ url_for('static', filename='image/DigiCubes_Kontur.svg') }}">Your browser does not support SVG</object>
+                    <span class="brand-logo dc-brand">{% block space_name %}{% endblock %}</span>
+                    <ul class="right hide-on-med-and-down">
+                        {% block main_menu %}{% endblock %}
+                    </ul>
+                    <ul id="nav-mobile" class="sidenav">
+                        {% block mobile_menu %}{% endblock %}
+                    </ul>
+                    <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 </div>
             </nav>
-            </div>
         </header>
         <main>
-            <div class="navbar-fixed">
-            <nav class="light-blue lighten-2 dc-submenu">
-            <div class="container">
-                <div class="nav-wrapper">
-                    <div class="row">
-                        <div class="col s1">
-                        &nbsp;
-                        </div>
-                        <div class="col s3">
-                            <div class="brand-logo left">{% block page_title %}{% endblock %}</div>
-                        </div>
-                        <div class="col s8">
-                            <ul class="right hide-on-med-and-down">
-                                {% block sub_menu %}{% endblock %}
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            </div>
-        </nav>
             {% block outer_main_content %}
             <div class="container">
                 {% block main_content %}{% endblock %}
@@ -73,6 +43,18 @@
         <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-3.4.1.slim.min.js') }}"></script>
         <script type="text/javascript" src="{{ url_for('static', filename='js/digicubes.js') }}"></script>
         <script type="text/javascript">
+            $(function() {
+                M.AutoInit();
+                M.updateTextFields();
+                {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                        {% for message in messages %}
+                            M.toast({ html: "{{message}}"});
+                            console.log("{{message}}");
+                        {% endfor %}
+                    {% endif %}
+                {% endwith %}
+            });
             {% block page_script %}{% endblock %}
         </script>
     </body>
