--- a/digicubes_flask/web/templates/account/change_password.jinja
+++ b/digicubes_flask/web/templates/account/change_password.jinja
@@ -9,13 +9,16 @@
         </div>
     </div>
     <div class="row">
-        <div class="col s12" id="dc_main">
+        <div class="col s12 m8" id="dc_main">
             <form method="POST" action="{{ action }}">
                 {{ form.csrf_token }}
                 {{ forms.row(form, "password") }}
                 {{ forms.row(form, "confirm") }}
                 {{ forms.submit(form) }}
             </form>
+        </div>
+        <div class="col m4 hide-on-small-only center">
+            <img src="{{ url_for('static', filename='image/digican-password.png') }}">
         </div>
     </div>
 </div>
